--- a/BordesRedondos/BordesRedondos.Windows/MainPage.xaml
+++ b/BordesRedondos/BordesRedondos.Windows/MainPage.xaml
@@ -7,7 +7,19 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid  
+        Style="{StaticResource grid}">
+
+
+        <ListView
+           ItemsSource="{Binding Source=OptionsCollection}"
+           ItemTemplate="{StaticResource itemOption}"
+           Width="350" >
+
+            
+        </ListView>
+
+
 
     </Grid>
 </Page>
